Revert "fix(styles): fix focus indicator visibility for links in accordion items on mobile"
This reverts commit 4c54916cb6ef4743d9b4e1a80fb2a81e124de8c2.

--- a/packages/components/src/components/post-footer/post-footer.scss
+++ b/packages/components/src/components/post-footer/post-footer.scss
@@ -105,10 +105,6 @@ footer {
   ::part(body) {
     padding-inline: 0;
   }
-  ::part(collapsible-container) {
-    margin-inline: -1rem;
-    padding-inline: 1rem;
-  }
 }
 
 .footer-column {
